- z-index fix

--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -10,15 +10,15 @@
         border-bottom-right-radius 0
 
       .vm-select-trigger
-        z-index 5
+        z-index 13
 
       .vm-select-input
         position relative
-        z-index 5
+        z-index 13
         transition border-radius .1s
 
       .vm-select-input-overlay
-        z-index 5
+        z-index 13
 
   .vm-select-input
     padding-right var(--right-icon-width)
